syntax = "proto3";

option go_package = "github.com/emicklei/parcello/v1";

package v1;

service DeliveryService {
  rpc Deliver (DeliverRequest) returns (DeliverResponse);
}

message DeliverRequest {
  Envelope envelope = 1;
}

message DeliverResponse {
  string errorMessage = 1;
}

message Envelope {
  // ID -> pubsub.Message.Attributes["parcello.ID"]
  // set by the server
  string ID = 1;

  // payload -> pubsub.Message.Data
  bytes payload = 2;

  // attributes -> pubsub.Message.Attributes
  map <string,string> attributes = 3;

  // destinationTopic -> pubsub.Message.Attributes["parcello.destinationTopic"]
  // required for the DeliverRequest
  string destinationTopic = 4;

  // publishAfter -> pubsub.Message.Attributes["parcello.publishAfter"]
  // required for the DeliverRequest
  uint64 publishAfter = 5; // unix time   

  // deliveredAt -> pubsub.Message.Attributes["parcello.deliveredAt"]
  // set by the server to the time the DeliverRequest was sent
  uint64 deliveredAt = 6; // unix time

  // publishCount -> pubsub.Message.Attributes["parcello.publishCount"]
  // set by the server to 1 on first publish to destination
  uint64 publishCount = 7;
}

